Fix for printing of choices that are not of type string.
In our case have choices that are ints (should be bools), now all
scalar types are covered.

--- a/docs/templates/module.rst.j2
+++ b/docs/templates/module.rst.j2
@@ -71,7 +71,8 @@ See Also
   {{ "  " * level }}| **default**: {{ spec.default }}
 {%     endif %}
 {%     if spec.choices %}
-  {{ "  " * level }}| **choices**: {{ ", ".join(spec.choices) }}
+{%       set str_choices = spec.choices | map("string")  %}
+  {{ "  " * level }}| **choices**: {{ ", ".join(str_choices) }}
 {%     endif %}
 
 {%     if spec.suboptions %}
