CI add variables to signal what can be tested on a cluster
This depends on HyperCore version. We need to know if
cluster name can be changed, version can be upgraded, and if
virtual disk feature is supported.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/integration_config.yml.j2
+++ b/tests/integration/integration_config.yml.j2
@@ -81,6 +81,24 @@ sc_config:
     smtp:
       <<: *base_smtp
       from_address: PUB5@scalecomputing.com
+    # Under features are described properties that affect expected integration test output.
+    features:
+      version_update:
+        # Current SW (ICOS) version running on the host.
+        current_version: "9.2.13.211102"
+        # The next version available update for the host.
+        next_version: ""
+        # The latest version available update for the host.
+        latest_version: ""
+        # Can we update the host? VSNS hosts report update as available,
+        # but if we try to update, the update fails (unsupported HW is reported back).
+        can_be_applied: True
+      virtual_disk:
+        # Virtual disk feature is supported iff version ">=9.2.10"
+        is_supported: True
+      cluster_name:
+        # cluster name can be changed iff version ">=9.1.21 <9.2.0 || >=9.2.11"
+        is_writable: True
 
   https://10.5.11.200:
     <<: *base_cfg
@@ -96,6 +114,16 @@ sc_config:
       from_address: VSNS200@scalecomputing.com
     syslog_server:
       host: 10.5.11.222
+    features:
+      version_update:
+        current_version: "9.1.14.208456"
+        next_version: "9.1.23.210897"
+        latest_version: "9.1.23.210897"
+        can_be_applied: False
+      virtual_disk:
+        is_supported: False
+      cluster_name:
+        is_writable: False
 
   https://10.5.11.201:
     <<: *base_cfg
@@ -111,3 +139,13 @@ sc_config:
       from_address: VSNS201@scalecomputing.com
     syslog_server:
       host: 10.5.11.222
+    features:
+      version_update:
+        current_version: "9.2.13.211102"
+        next_version: ""
+        latest_version: ""
+        can_be_applied: False
+      virtual_disk:
+        is_supported: True
+      cluster_name:
+        is_writable: True
