--- a/tests/integration/integration_config.yml.j2
+++ b/tests/integration/integration_config.yml.j2
@@ -105,7 +105,7 @@ sc_config:
     sc_username: admin
     sc_password: admin
     cluster:
-      name: VSNS200
+      name: "HC3 System"  # VSNS200
     support_tunnel:
       open: true
       code: "4423"
