--- a/tests/integration/integration_config.yml.j2
+++ b/tests/integration/integration_config.yml.j2
@@ -96,6 +96,8 @@ sc_config:
       virtual_disk:
         # Virtual disk feature is supported iff version ">=9.2.10"
         is_supported: True
+        # expected virtual disk replucation factor
+        replication_factor: 2
       cluster_name:
         # cluster name can be changed iff version ">=9.1.21 <9.2.0 || >=9.2.11"
         is_writable: True
@@ -122,6 +124,7 @@ sc_config:
         can_be_applied: False
       virtual_disk:
         is_supported: False
+        # replication_factor:
       cluster_name:
         is_writable: False
 
@@ -147,5 +150,6 @@ sc_config:
         can_be_applied: False
       virtual_disk:
         is_supported: True
+        replication_factor: 1
       cluster_name:
         is_writable: True
