Refactor vm_replication_info to pass also on cluster without replication
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/integration_config.yml.j2
+++ b/tests/integration/integration_config.yml.j2
@@ -68,6 +68,7 @@ sc_config:
     sc_username: "{{ sc_username_50 }}"
     sc_password: "{{ sc_password_50 }}"
     # Only .50 is configured with remote replication.
+    # Set sc_replication_dest_host/username/password to "" to signal no replication is configured.
     sc_replication_dest_host: https://10.5.11.60
     # We have same username on .50 and .60 node.
     sc_replication_dest_username: "{{ sc_username_50 }}"
@@ -106,6 +107,9 @@ sc_config:
     <<: *base_cfg
     sc_username: admin
     sc_password: admin
+    sc_replication_dest_host: ""
+    sc_replication_dest_username: ""
+    sc_replication_dest_password: ""
     cluster:
       name: "HC3 System"  # VSNS200
     support_tunnel:
@@ -132,6 +136,9 @@ sc_config:
     <<: *base_cfg
     sc_username: admin
     sc_password: admin
+    sc_replication_dest_host: ""
+    sc_replication_dest_username: ""
+    sc_replication_dest_password: ""
     cluster:
       name: VSNS201
     support_tunnel:
