CI use time.google.com for testing
Running
watch -n1 'ntpdate -4qu time.google.com 2>&1 | tee -a a2'
for about 1 hour - almost all requests were OK.
With pool.ntp.org - more errors than OK responses.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/integration_config.yml.j2
+++ b/tests/integration/integration_config.yml.j2
@@ -32,7 +32,9 @@ sc_config:
   base_cfg: &base_cfg
     # desired configuration after tests are done
     time_server:
-      source: pool.ntp.org
+      # pool.ntp.org servers frequently return KOD.
+      # time.google.com does not complain.
+      source: time.google.com
     time_zone:
       zone: US/Eastern
     dns_config:
