Fix vm_clone to clone replicated VM
The VirDomain/<uuid>/clone payload must include snapUUID.
This required extengin VM class with snapshot_uuids field (and extending
many existing unit tests).

Integration test for cloning replicated VM on destination cluster
was added. This required adding sc_replication_dest_cluster_name to
integration_config.yml.

I noticed vm_snapshot_info could include into output also `unavailable`
attribute. VM snapshot cannot be used for clonning until it gets
available.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/integration_config.yml.j2
+++ b/tests/integration/integration_config.yml.j2
@@ -72,6 +72,7 @@ sc_config:
     # Only .50 is configured with remote replication.
     # Set sc_replication_dest_host/username/password to "" to signal no replication is configured.
     sc_replication_dest_host: https://10.5.11.60
+    sc_replication_dest_cluster_name: PUB6
     # We have same username on .50 and .60 node.
     sc_replication_dest_username: "{{ sc_username_50 }}"
     sc_replication_dest_password: "{{ sc_password_50 }}"
@@ -113,6 +114,7 @@ sc_config:
     sc_username: admin
     sc_password: admin
     sc_replication_dest_host: ""
+    sc_replication_dest_cluster_name: ""
     sc_replication_dest_username: ""
     sc_replication_dest_password: ""
     cluster:
@@ -144,6 +146,7 @@ sc_config:
     sc_username: admin
     sc_password: admin
     sc_replication_dest_host: ""
+    sc_replication_dest_cluster_name: ""
     sc_replication_dest_username: ""
     sc_replication_dest_password: ""
     cluster:
