typo in cloud-init user-data fixed
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/examples/vm_os_upgrade/cloud-init-source-vm.yml.j2
+++ b/examples/vm_os_upgrade/cloud-init-source-vm.yml.j2
@@ -28,7 +28,7 @@ autoinstall:
                 lock_passwd: false
                 primary_group: myuser
                 groups: 'adm, cdrom, sudo, dip, plugdev, netdev, lxd'
-                authorized-keys:
+                ssh_authorized_keys:
                   - {% include demo_ssh_key_path + ".pub" %}
         ssh:
             disable_root: false
