Add acpid package to cloud_init

--- a/examples/vm_os_upgrade/cloud-init-source-vm.yml.j2
+++ b/examples/vm_os_upgrade/cloud-init-source-vm.yml.j2
@@ -40,6 +40,7 @@ autoinstall:
         - qemu-guest-agent
         - vim
         - nginx
+        - acpid
     early-commands: []
     late-commands:
         # rootp password
