CI HyperCore 9.2.27.213408 was released
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/integration_config.yml.j2
+++ b/tests/integration/integration_config.yml.j2
@@ -142,7 +142,7 @@ sc_config:
       version_update:
         current_version: "9.1.14.208456"
         next_version: "9.2.24.212633"
-        latest_version: "9.2.24.212633"
+        latest_version: "9.2.27.213408"
         can_be_applied: False
         # We can try update, update will fail, and status.json will be present.
         old_update_status_present: True
@@ -176,8 +176,8 @@ sc_config:
     features:
       version_update:
         current_version: "9.2.13.211102"
-        next_version: ""
-        latest_version: ""
+        next_version: "9.2.24.212633"
+        latest_version: "9.2.27.213408"
         can_be_applied: False
         old_update_status_present: False
       virtual_disk:
