CI vTPM disk is supported on HyperCore 9.4
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/integration_config.yml.j2
+++ b/tests/integration/integration_config.yml.j2
@@ -260,5 +260,7 @@ sc_config:
       virtual_disk:
         is_supported: True
         replication_factor: 1
+      vtpm_disk:
+        is_supported: True
       cluster_name:
         is_writable: True
