Partially revert 70d640fc8a6ecaf275fca48920c493d57996b71e
The VSNS 9.2.13.211102 still does not know about updates

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/integration_config.yml.j2
+++ b/tests/integration/integration_config.yml.j2
@@ -181,8 +181,9 @@ sc_config:
     features:
       version_update:
         current_version: "9.2.13.211102"
-        next_version: "9.2.24.212633"
-        latest_version: "9.2.27.213408"
+        # This VSNS does not get list of available updates from update server.
+        next_version: ""
+        latest_version: ""
         can_be_applied: False
         old_update_status_present: False
       virtual_disk:
