CI tolerate different eth device names on different clusters.
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/role_template2vm/templates/meta-data.ubuntu-20.04.yml.j2
+++ b/tests/integration/targets/role_template2vm/templates/meta-data.ubuntu-20.04.yml.j2
@@ -5,7 +5,14 @@ network-interfaces: |
   iface lo inet loopback
 
 {% if vm_network_mode == "dhcp" %}
+  # On Intel NUC with v9.2.27 (https://172.31.6.11) we have eth device ens3
+  # vm_network_iface==ens3
   iface {{ vm_network_iface }} inet dhcp
+
+  # But we have eth device ens1 on
+  #   - CI VSNS v9.3.5 (https://10.5.11.203/)
+  #   - CI VSNS v9.4.0 (https://10.5.11.204/)
+  iface ens1 inet dhcp
 {% endif %}
 {% if vm_network_mode == "static" %}
   iface {{ vm_network_iface }} inet static
